--- a/AdvancedDevSample.Application/AdvancedDevSample.Application.csproj
+++ b/AdvancedDevSample.Application/AdvancedDevSample.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AdvancedDevSample.Domain\AdvancedDevSample.Domain.csproj" />
   </ItemGroup>
 
