--- a/AdvancedDevSample.Domain/AdvancedDevSample.Domain.csproj
+++ b/AdvancedDevSample.Domain/AdvancedDevSample.Domain.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.3" />
+    <PackageReference Include="v24.OpenApi.Models" Version="2.0.45" />
   </ItemGroup>
 
 </Project>
